- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1050                                 -
---------------------------------------------
- 2020-11-08                                -
---------------------------------------------
.: WSM: Task: Create build bot (WSM-216)
.: WSM: Task: Add Social Media (WSM-52)

---------------------------------------------
- 2020-11-06                                -
---------------------------------------------
.: WSM: Task: Standardize button colors (WSM-217)
.: WSM: Task: Standardize loading (WSM-226)

---------------------------------------------
- 2020-11-04                                -
---------------------------------------------
.: WSM: Task: Icon in QRcode is too blur (WSM-219)

---------------------------------------------
- 2020-11-03                                -
---------------------------------------------
.：WSM: BugFix: Doesn't implement the correct font for logo (WSM-224)

- v1.0.1040                                 -
---------------------------------------------
- 2020-11-01                                -
---------------------------------------------
.: WSM: Task: Quick Menu Page (WSM-220)
.: WSM: Task: Prevent caching issue (WSM-221)
.: WSM: BugFix: Fix cross month tracking issue (WSM-211)

---------------------------------------------
- 2020-10-31                                -
---------------------------------------------
.: WSM: Task: Deployment (WSM-215)
.: WSM: BugFix: Reading url from backend issue (WSM-218)
.: WSM: BugFix: Fix store page issue (WSM-209)
.: WSM: BugFix: Fix contributor invitation issue (WSM-210)

---------------------------------------------
- 2020-10-25                                -
---------------------------------------------
.: WSM: BugFix: Profile Image with qrcode updated (WSM-209)
.: WSM: Task: Update Tracking URL (WSM-211)

---------------------------------------------
- 2020-10-24                                -