@@ -135,7 +135,7 @@
         font-size: 3rem;
         color: #fff;
         -webkit-text-fill-color: white;
-        -webkit-text-stroke-width: .5px;
+        -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: #b71c1c;
     }
 
