@@ -9,9 +9,16 @@
         padding: 1rem 1.5rem;
 
         .setup-list-item-icon {
-            color: #222;
             font-size: 1.8rem;
             padding: 0 1.5rem 0 0;
+            color: #fff;
+            -webkit-text-fill-color: white;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: #b71c1c;
+        }
+        .setup-list-item-sm-icon {
+            font-size: 1rem;
+            padding: 0 .5rem 0 0;
             color: #fff;
             -webkit-text-fill-color: white;
             -webkit-text-stroke-width: 1px;
