@@ -18,7 +18,7 @@
       <span *ngIf="isMobileSize" class="text-center clickable"
         style="line-height: 47px; vertical-align: middle; border-bottom: 1px solid #e5e5e5"
         (click)="onNavbarOpen()">
-        <span class="fas fa-bars d-inline-block pr-3 pl-3"></span>
+        <span class="fas fa-bars d-inline-block px-2"></span>
       </span>
       <breadcrumb class="col"></breadcrumb>
     </div>
