@@ -130,6 +130,10 @@ ws-left-nav{
         }
     }
     
+    ws-left-nav{
+        z-index: 998;
+    }
+    
     .main-container-with-nav,
     .main-container-with-nav.main-container-with-nav-icon{
         padding-left: 0px;
