@@ -1,8 +1,7 @@
 .settings-container{
     cursor: pointer;
-    padding: 1.5rem 1rem;
+    padding: 1.5rem 1.5rem;
     display: flex;
-    justify-content: center;
     text-align: left;
     background-color: #f7f7f7;
 
