@@ -1,7 +1,7 @@
 <h4 class="ws-title">Tracking Figure</h4>
 <div class="tracking-figure-container">
-    <div class="row no-gutters mb-4">
-        <div class="col-lg-3 col mb-2 mb-lg-0">
+    <div class="row no-gutters mb-lg-4 mb-2">
+        <div class="col-lg-3 col">
             <div class="tracking-figure tracking-figure__today">
                 <h4 class="h6 mb-0 font-weight-normal" style="min-width: 200px">
                     Number of customer today:
@@ -15,7 +15,7 @@
         </div>
     </div>
     
-    <div class="row no-gutters tracking-figure mb-4">
+    <div class="row no-gutters tracking-figure mb-lg-4 mb-2">
         <button [disabled]="loading.isRunning()" (click)="getTodayTrack()" title="Refresh" class="btn btn-controller float-right">
             <span [class.loading]="loading.isRunning()" class="fas fa-sync-alt"></span>
         </button>
@@ -47,27 +47,27 @@
         <h4 class="h5 font-weight-normal mb-3">History</h4>
         <div class="bg-white p-3">
             <div class="row no-gutters">
-                <div class="mb-2 d-inline-block col">
-                    <label class="tracking-figure__label">From Date: </label>
-                    <input (click)="fromPicker.open()" class="form-control form-control-sm d-inline-block" style="max-width: 200px" [(ngModel)]="fromDate" [matDatepicker]="fromPicker" [max]="maxDate" />
+                <div class="mb-2 d-inline-block col-lg">
+                    <label class="tracking-figure__label d-block d-lg-inline-block">From Date: </label>
+                    <input (click)="fromPicker.open()" class="form-control form-control-sm d-inline-block" [ngStyle]="{'max-width': isMobileSize? '100%' : '200px'}" [(ngModel)]="fromDate" [matDatepicker]="fromPicker" [max]="maxDate" />
                     <mat-datepicker #fromPicker startView="month" [startAt]="fromDate" (opened)="openCalendar()"></mat-datepicker>
                 </div>
-                <div class="mb-2 d-inline-block col">
-                    <label class="tracking-figure__label">To Date: </label>
-                    <input (click)="toPicker.open()" class="form-control form-control-sm d-inline-block" style="max-width: 200px" [(ngModel)]="toDate" [matDatepicker]="toPicker" [min]="fromDate" [max]="maxDate" />
+                <div class="mb-2 d-inline-block col-lg">
+                    <label class="tracking-figure__label d-block d-lg-inline-block">To Date: </label>
+                    <input (click)="toPicker.open()" class="form-control form-control-sm d-inline-block" [ngStyle]="{'max-width': isMobileSize? '100%' : '200px'}" [(ngModel)]="toDate" [matDatepicker]="toPicker" [min]="fromDate" [max]="maxDate" />
                     <mat-datepicker #toPicker startView="month" [startAt]="toDate" (opened)="openCalendar()"></mat-datepicker>
                 </div>
-                <div class="mb-3 d-inline-block col">
-                    <label class="tracking-figure__label">Target: </label>
-                    <mat-select class="form-control form-control-sm d-inline-block" style="max-width: 200px" [(ngModel)]="targets" (openedChange)="selectionOpenedChange($event)" (selectionChange)="selectionChange()" multiple>
+                <div class="mb-3 d-inline-block col-lg">
+                    <label class="tracking-figure__label d-block d-lg-inline-block">Target: </label>
+                    <mat-select class="form-control form-control-sm d-inline-block" [ngStyle]="{'max-width': isMobileSize? '100%' : '200px'}" [(ngModel)]="targets" (openedChange)="selectionOpenedChange($event)" (selectionChange)="selectionChange()" multiple>
                         <mat-option *ngFor="let track of tracks" [disabled]="'Number of Total Customers' == track.name" [value]="track?.name">{{track?.name}}</mat-option>
                         <div *ngIf="tracksLoading.isRunning()" class="text-center py-3">
                             <ws-spinner [borderWidth]="1" [spinnerColor]="'#b71c1c'"></ws-spinner>
                         </div>
                     </mat-select>
                 </div>
-                <div class="mb-3 col">
-                    <button class="btn btn-sm btn-controller" (click)="getBetweenTracks()">Search</button>
+                <div class="mb-3 col-lg">
+                    <button class="btn btn-sm btn-controller" [class.w-100]="isMobileSize" (click)="getBetweenTracks()">Search</button>
                 </div>
             </div>
             <div *ngIf="loading.isRunning()" class="d-flex justify-content-center align-items-center" style="height: 300px">
