@@ -1,4 +1,6 @@
 .tracking-figure-container{
+    margin-bottom: 1rem;
+
     .tracking-figure__label{
         font-size: .9rem;
         margin-bottom: 0;
