@@ -8,6 +8,7 @@
 ---------------------------------------------
 .: WSM: Task: Create build bot (WSM-216)
 .: WSM: Task: Add Social Media (WSM-52)
+.: WSM: Update Mobile Version in Merchant (WSM-225)
 
 ---------------------------------------------
 - 2020-11-06                                -
